# TorchDocsAgent

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ask.yml  backfill-content.yml  build-index.yml  calibrate-guard.yml  diagnose-retrieval.yml  dump-manifest.yml  eval-agentic.yml  eval-retrieval.yml  eval.yml  generate-glosses.yml  pages.yml  search.yml  security.yml  smoke-hf.yml  sync-to-hf.yml
agent/: graph.py  grounded.py  guard.py  llm.py  loop.py  route.py  schemas.py  tools.py  tools_exec.py  translate.py
app/: main.py
docs/: README.md  deploy-hf-spaces.md  design-content-and-agent-flow.md  loop-vs-langgraph.md  retrieval-gaps-and-improvements.md
docs/agent/: README.md
docs/app/: README.md
docs/eval/: README.md
docs/index/: README.md
docs/ingest/: README.md
docs/scripts/: README.md
eval/: agentic_v1.jsonl  checks.py  diagnose_retrieval.py  docs_inventory.jsonl  hallucinations.md  index_manifest.jsonl  invalid_v1.jsonl  questions_v0.jsonl  questions_v1.jsonl  retrieval_v0.jsonl  run_agentic.py  run_judge.py  run_retrieval.py  run_v0.py
eval/results/: agentic_v1_first6.jsonl  judge_v1_first10.jsonl  retrieval_v0.jsonl  retrieval_v1.jsonl  retrieval_v1_norerank.jsonl  v0-grounded.jsonl  v0.jsonl
index/: db.py  embed.py  freshness.py  glosses.jsonl  hydrate.py  questions.jsonl  rerank.py  retrieve.py
ingest/: chunk_docs.py  crawl.py  discover.py
scripts/: ask.py  build_index.py  calibrate_guard.py  coverage_diff.py  dump_docs_inventory.py  dump_index_manifest.py  gen_requirements.py  generate_glosses.py  generate_questions.py  search.py  smoke.py  smoke_space.py
site/: index.html
tests/: conftest.py  test_placeholder.py  test_requirements_mirror.py
tests/agent/: test_graph.py  test_grounded.py  test_guard.py  test_llm.py  test_loop.py  test_route.py  test_schemas.py  test_tools.py  test_translate.py
tests/app/: test_concurrency.py  test_rate_limit.py  test_render.py
tests/eval/: test_checks.py  test_run_agentic.py  test_run_judge.py  test_run_retrieval.py  test_run_v0.py
tests/index/: test_build_index.py  test_db.py  test_embed.py  test_freshness.py  test_hydrate.py  test_rerank.py  test_retrieve.py
tests/ingest/: __init__.py  test_chunk_docs.py  test_crawl.py  test_discover.py
tests/scripts/: test_generate_glosses.py  test_generate_questions.py
