[project]
name = "torchdocs-agent"
version = "0.1.0"
description = "AI-powered chat agent for PyTorch documentation and code"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "python-dotenv>=1",
    "psycopg[binary]>=3.1",
    "anthropic>=0.40",
    "google-genai>=1",
    "openai>=1.50",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest*", "index*", "agent*", "eval*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
