[project]
name = "torchdocs-agent"
version = "0.1.0"
description = "AI-powered chat agent for PyTorch documentation and code"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
# Runtime deps live in requirements.txt (the single source), read in below via
# dynamic metadata — HF Spaces installs that file directly, and `pip install .`
# / `-e .` picks up the same list. One file, no drift.
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["ingest*", "index*", "agent*", "eval*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
